finalize error log
